# oz

./: .gitignore  CMakeLists.txt
apps/: main_eigen.cpp  main_glfw.cpp  main_png.cpp
apps/AppBasic/: AppBasic.cpp  AppBasic.h
models/lib_hand_model/: hand_palm_parent_medium_wrist.dae  hand_palm_parent_medium_wrist_right.dae
oz-source/App/: App.cpp  App.h  Keyboard.cpp  Keyboard.h  KeyboardListener.h  Mouse.cpp  Mouse.h  MouseListener.h  Window.cpp  Window.h
oz-source/GL/: ArrayBuffer.h  Constants.h  ElementBuffer.h  GLContext.cpp  GLContext.h  PixelTypes.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.h  Texture2D.cpp  Texture2D.h  VertexArrayObject.h  VertexBuffer.h  VertexBufferBase.h  VertexWriter.h
oz-source/Geometry/: Assimp.cpp  Assimp.h  Bone.h  Geometry.h  Primitives.cpp  Primitives.h  TriangleMesh.cpp  TriangleMesh.h  Wire.cpp  Wire.h
oz-source/Image/: IO.cpp  IO.h
oz-source/Math/: Math.h  TransformBaseAddons.h  matrix3.h  matrix4.h  vector3.h  vector4.h
oz-source/Scene/: Camera.h  Node.h  Object.h  Scene.cpp  Scene.h  Visitor.h
oz-source/Vector/: Vector.h
oz-unused/: Text.cpp  Text.h
shaders/: 2d.f.glsl  2d.v.glsl  TriangleMeshWithTexture.f.glsl  TriangleMeshWithTexture.v.glsl  circle.f.glsl  circle.v.glsl  depth2pts.v.glsl  depth2stencil.f.glsl  depth32f.f.glsl  depth32f.v.glsl  depthtex2pts.f.glsl  diag.f.glsl  fontglyph.f.glsl  fontglyph.v.glsl  fragtest.f.glsl  fragtest.v.glsl  icp1x1.f.glsl  icp_corr.f.glsl  icp_corr.v.glsl  icp_corr_clear.f.glsl  icp_corr_implicit_box.f.glsl  icp_corr_implicit_box_p2p.f.glsl  icp_corr_implicit_sphere.f.glsl  icp_corr_normals.f.glsl  icp_corr_normals.v.glsl  icp_draw.g.glsl  icp_draw.v.glsl  icp_draw_tex.v.glsl  icp_points.g.glsl2  icp_points.v.glsl2  label32f.f.glsl  label32f.v.glsl  line.v.glsl  multilight.v.glsl  per-fragment-lighting-fs  pointcloud.v.glsl  pointcloud_normals.f.glsl  pointcloud_normals.g.glsl  pointcloud_normals.v.glsl  pointcloud_normals_no_color.v.glsl  (+21 more)
